--- a/estilo-site.css
+++ b/estilo-site.css
@@ -29,7 +29,7 @@
   }
   
   main {
-    background-image: url(bg.jpg) no-repeat center center;
+    background-image: url(img/bg.jpg) no-repeat center center;
     background-size: cover;
     height: 92vh;
   }
