--- a/estilo-site.css
+++ b/estilo-site.css
@@ -109,3 +109,10 @@
   .mobile-menu.active .line3 {
     transform: rotate(45deg) translate(-5px, -7px);
   }
+
+  body {
+    background-image: url(img/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center center ;
+  }
