--- a/estilo-site.css
+++ b/estilo-site.css
@@ -114,5 +114,6 @@
     background-image: url(img/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position:center center ;
+    background-position:center center;
+    height: 92vh;
   }
