--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: rgb(17, 6, 15);
+  color: rgb(58, 20, 51);
   font-family: "Montserrat", "sans-serif";
 }
 
 :root {
-  --bgcolor: #1c1c1c;
-  --accentcolor: #23232e;
+  --bgcolor: #332828;
+  --accentcolor: #4a4a64;
 }
 
 body {
@@ -29,7 +29,7 @@ body {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  border: solid 4px rgb(54, 46, 53);
+  border: solid 4px rgb(11, 31, 88);
 }
 
 .link-tree h1 {
